--- a/feedback.html
+++ b/feedback.html
@@ -356,6 +356,8 @@
 <script type="text/javascript" src="js/sweet.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="text/javascript" src="js/sweet2.js"></script>
+
 <script type="text/javascript" src="util/api.js"></script>
 
  <!-- <script type="text/javascript" src="js/index.js"></script> -->
