functionality and database functionality

--- a/feedback.html
+++ b/feedback.html
@@ -20,19 +20,6 @@
 </head>
 <body>
 
-	<nav>
-		<div class=" topmenu left_menu">
-
-		</div>
-		<div class=" topmenu centered_menu animate__backInDown">
-			FEEDBACK
-		</div>
-		<div class=" topmenu right_menu">
-    <a href="index.html" ><i class="fa fa-home fa-2x"></i></a>
-    </div>
-		 </nav>
-
-
  <div class="main_body">
   <div class="row parcel_form">
 
@@ -60,6 +47,7 @@
           name="sub_1_4"
           id="sub_1_4"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -76,6 +64,7 @@
           <select
           name="sub_1_19"
           id="sub_1_19"
+          class="select_els"
           style="display: block;"
         >
           <option value="">Select your answer</option>
@@ -107,6 +96,7 @@
           name="sub_1_5"
           id="sub_1_5"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -127,6 +117,7 @@
           name="sub_1_6"
           id="sub_1_6"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -149,6 +140,7 @@
           name="sub_1_8"
           id="sub_1_8"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -168,6 +160,7 @@
           name="sub_1_9"
           id="sub_1_9"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -188,6 +181,7 @@
           name="sub_1_10"
           id="sub_1_10"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes" value="yes">
@@ -206,6 +200,7 @@
           name="sub_1_11"
           id="sub_1_11"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="yes_11" value="yes">
@@ -224,6 +219,7 @@
           name="sub_1_21"
           id="sub_1_21"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="m-pesa" value="m-pesa">
@@ -250,6 +246,7 @@
           name="sub_1_13"
           id="sub_1_13"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="direct_bank" value="Direct Debit from Bank">
@@ -276,6 +273,7 @@
           name="sub_1_15"
           id="sub_1_15"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="Ksh 200" value="Ksh 200">
@@ -307,6 +305,7 @@
           name="sub_1_17"
           id="sub_1_17"
           style="display: block;"
+          class="select_els"
         >
           <option value="">Select your answer</option>
           <option id="" value="1">
